--- a/src/main/resources/play.properties
+++ b/src/main/resources/play.properties
@@ -11,12 +11,8 @@ jdbc.maxStatements=100
 jdbc.testConnection=true
 
 
-#\u7ba1\u7406\u57fa\u7840\u8def\u5f84, \u9700\u540c\u6b65\u4fee\u6539\uff1aweb.xml
-adminPath=/manager
-#\u524d\u7aef\u57fa\u7840\u8def\u5f84
-frontPath=/front
-
-
+#\u9ed8\u8ba4\u8fdb\u5165\u5730\u5740
+sys.view.index=/manager/login
 
 #\u7f51\u7ad9URL\u540e\u7f00
 urlSuffix=.html
